Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-30695

Cannot enter a shortcut in Designer

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.1.0
    • 5.0.2
    • GUI: Look'n'Feel
    • MacOS X 10.8.3
    • 4ca105b9bbf5c1e9b539da9522c630574eba3471

      Open Designer.
      Click "Create" (create new main window based application).
      Add a menu.
      Add a subitem to the menu.
      Go to "Shortcut" in object properties pane and click on the box to enter it.
      Type Command-N.
      Designer interprets this as a shortcut to its own GUI instead of capturing the key combination.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            frederik Frederik Gladhorn
            lyndon Lyndon Hill
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes